dhcp type define

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(DHCP_server)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp dhcp.cpp dhcp.h)
+set(SOURCE_FILES dhcp_server.cpp dhcp.cpp dhcp.h)
 add_executable(DHCP_server ${SOURCE_FILES})
